# AssimpAndroidPort

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle  makeCmakeLists.sh  proguard-rules.pro
app/source/include/: revision.h
app/source/include/assimp/: config.h
app/src/androidTest/java/com/sanxiaod/assimpandroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/sanxiaod/assimpandroid/: MainActivity.java
app/src/test/java/com/sanxiaod/assimpandroid/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
