
cmake_minimum_required(VERSION 3.4.1)

set(ROOT_PATH ${CMAKE_SOURCE_DIR}/source)
set(CONTRIB_PATH ${ROOT_PATH}/contrib)
set(HEADER_PATH ${ROOT_PATH}/include)
set(SOURCE_PATH ${ROOT_PATH}/code)

include_directories(${ROOT_PATH})
include_directories(${CONTRIB_PATH})
include_directories(${CONTRIB_PATH}/irrXML)
include_directories(${CONTRIB_PATH}/poly2tri)
include_directories(${CONTRIB_PATH}/openddlparser/include)
include_directories(${CONTRIB_PATH}/rapidjson/include)
include_directories(${CONTRIB_PATH}/utf8cpp/source)

add_library( contrib

             STATIC

             ${CONTRIB_PATH}/clipper/clipper.cpp
             ${CONTRIB_PATH}/irrXML/irrXML.cpp
             ${CONTRIB_PATH}/Open3DGC/o3dgcArithmeticCodec.cpp
             ${CONTRIB_PATH}/Open3DGC/o3dgcDynamicVectorDecoder.cpp
             ${CONTRIB_PATH}/Open3DGC/o3dgcDynamicVectorEncoder.cpp
             ${CONTRIB_PATH}/Open3DGC/o3dgcTools.cpp
             ${CONTRIB_PATH}/Open3DGC/o3dgcTriangleFans.cpp
             ${CONTRIB_PATH}/openddlparser/code/DDLNode.cpp
             ${CONTRIB_PATH}/openddlparser/code/OpenDDLCommon.cpp
             ${CONTRIB_PATH}/openddlparser/code/OpenDDLExport.cpp
             ${CONTRIB_PATH}/openddlparser/code/OpenDDLParser.cpp
             ${CONTRIB_PATH}/openddlparser/code/OpenDDLStream.cpp
             ${CONTRIB_PATH}/openddlparser/code/Value.cpp
             ${CONTRIB_PATH}/poly2tri/poly2tri/common/shapes.cc
             ${CONTRIB_PATH}/poly2tri/poly2tri/sweep/advancing_front.cc
             ${CONTRIB_PATH}/poly2tri/poly2tri/sweep/cdt.cc
             ${CONTRIB_PATH}/poly2tri/poly2tri/sweep/sweep_context.cc
             ${CONTRIB_PATH}/poly2tri/poly2tri/sweep/sweep.cc
             ${CONTRIB_PATH}/unzip/ioapi.c
             ${CONTRIB_PATH}/unzip/unzip.c
             ${CONTRIB_PATH}/zlib/adler32.c
             ${CONTRIB_PATH}/zlib/compress.c
             ${CONTRIB_PATH}/zlib/crc32.c
             ${CONTRIB_PATH}/zlib/deflate.c
             ${CONTRIB_PATH}/zlib/gzclose.c
             ${CONTRIB_PATH}/zlib/gzlib.c
             ${CONTRIB_PATH}/zlib/gzread.c
             ${CONTRIB_PATH}/zlib/gzwrite.c
             ${CONTRIB_PATH}/zlib/infback.c
             ${CONTRIB_PATH}/zlib/inffast.c
             ${CONTRIB_PATH}/zlib/inflate.c
             ${CONTRIB_PATH}/zlib/inftrees.c
             ${CONTRIB_PATH}/zlib/trees.c
             ${CONTRIB_PATH}/zlib/uncompr.c
             ${CONTRIB_PATH}/zlib/zutil.c
             )

include_directories(${HEADER_PATH})

add_library( matrix_ap

             SHARED

             ${SOURCE_PATH}/3DSConverter.cpp
             ${SOURCE_PATH}/3DSExporter.cpp
             ${SOURCE_PATH}/3DSLoader.cpp
             ${SOURCE_PATH}/ACLoader.cpp
             ${SOURCE_PATH}/AMFImporter.cpp
             ${SOURCE_PATH}/AMFImporter.hpp
             ${SOURCE_PATH}/AMFImporter_Geometry.cpp
             ${SOURCE_PATH}/AMFImporter_Macro.hpp
             ${SOURCE_PATH}/AMFImporter_Material.cpp
             ${SOURCE_PATH}/AMFImporter_Node.hpp
             ${SOURCE_PATH}/AMFImporter_Postprocess.cpp
             ${SOURCE_PATH}/ASELoader.cpp
             ${SOURCE_PATH}/ASEParser.cpp
             ${SOURCE_PATH}/AssbinExporter.cpp
             ${SOURCE_PATH}/AssbinLoader.cpp
             ${SOURCE_PATH}/Assimp.cpp
             ${SOURCE_PATH}/AssimpCExport.cpp
             ${SOURCE_PATH}/AssxmlExporter.cpp
             ${SOURCE_PATH}/B3DImporter.cpp
             ${SOURCE_PATH}/BVHLoader.cpp
             ${SOURCE_PATH}/BaseImporter.cpp
             ${SOURCE_PATH}/BaseProcess.cpp
             ${SOURCE_PATH}/Bitmap.cpp
             ${SOURCE_PATH}/BlenderBMesh.cpp
             ${SOURCE_PATH}/BlenderDNA.cpp
             ${SOURCE_PATH}/BlenderDNA.inl
             ${SOURCE_PATH}/BlenderLoader.cpp
             ${SOURCE_PATH}/BlenderModifier.cpp
             ${SOURCE_PATH}/BlenderScene.cpp
             ${SOURCE_PATH}/BlenderTessellator.cpp
             ${SOURCE_PATH}/CInterfaceIOWrapper.cpp
             ${SOURCE_PATH}/CMakeLists.txt
             ${SOURCE_PATH}/COBLoader.cpp
             ${SOURCE_PATH}/CSMLoader.cpp
             ${SOURCE_PATH}/CalcTangentsProcess.cpp
             ${SOURCE_PATH}/ColladaExporter.cpp
             ${SOURCE_PATH}/ColladaLoader.cpp
             ${SOURCE_PATH}/ColladaParser.cpp
             ${SOURCE_PATH}/ComputeUVMappingProcess.cpp
             ${SOURCE_PATH}/ConvertToLHProcess.cpp
             ${SOURCE_PATH}/CreateAnimMesh.cpp
             ${SOURCE_PATH}/D3MFImporter.cpp
             ${SOURCE_PATH}/D3MFOpcPackage.cpp
             ${SOURCE_PATH}/DXFLoader.cpp
             ${SOURCE_PATH}/DeboneProcess.cpp
             ${SOURCE_PATH}/DefaultIOStream.cpp
             ${SOURCE_PATH}/DefaultIOSystem.cpp
             ${SOURCE_PATH}/DefaultLogger.cpp
             ${SOURCE_PATH}/Exporter.cpp
             ${SOURCE_PATH}/FBXAnimation.cpp
             ${SOURCE_PATH}/FBXBinaryTokenizer.cpp
             ${SOURCE_PATH}/FBXConverter.cpp
             ${SOURCE_PATH}/FBXDeformer.cpp
             ${SOURCE_PATH}/FBXDocument.cpp
             ${SOURCE_PATH}/FBXDocumentUtil.cpp
             ${SOURCE_PATH}/FBXImporter.cpp
             ${SOURCE_PATH}/FBXMaterial.cpp
             ${SOURCE_PATH}/FBXMeshGeometry.cpp
             ${SOURCE_PATH}/FBXModel.cpp
             ${SOURCE_PATH}/FBXNodeAttribute.cpp
             ${SOURCE_PATH}/FBXParser.cpp
             ${SOURCE_PATH}/FBXProperties.cpp
             ${SOURCE_PATH}/FBXTokenizer.cpp
             ${SOURCE_PATH}/FBXUtil.cpp
             ${SOURCE_PATH}/FindDegenerates.cpp
             ${SOURCE_PATH}/FindInstancesProcess.cpp
             ${SOURCE_PATH}/FindInvalidDataProcess.cpp
             ${SOURCE_PATH}/FixNormalsStep.cpp
             ${SOURCE_PATH}/GenFaceNormalsProcess.cpp
             ${SOURCE_PATH}/GenVertexNormalsProcess.cpp
             ${SOURCE_PATH}/HMPLoader.cpp
             ${SOURCE_PATH}/IFCBoolean.cpp
             ${SOURCE_PATH}/IFCCurve.cpp
             ${SOURCE_PATH}/IFCGeometry.cpp
             ${SOURCE_PATH}/IFCLoader.cpp
             ${SOURCE_PATH}/IFCMaterial.cpp
             ${SOURCE_PATH}/IFCOpenings.cpp
             ${SOURCE_PATH}/IFCProfile.cpp
             ${SOURCE_PATH}/IFCReaderGen1.cpp
             ${SOURCE_PATH}/IFCReaderGen2.cpp
             ${SOURCE_PATH}/IFCUtil.cpp
             ${SOURCE_PATH}/IRRLoader.cpp
             ${SOURCE_PATH}/IRRMeshLoader.cpp
             ${SOURCE_PATH}/IRRShared.cpp
             ${SOURCE_PATH}/Importer.cpp
             ${SOURCE_PATH}/ImporterRegistry.cpp
             ${SOURCE_PATH}/ImproveCacheLocality.cpp
             ${SOURCE_PATH}/JoinVerticesProcess.cpp
             ${SOURCE_PATH}/LWOAnimation.cpp
             ${SOURCE_PATH}/LWOBLoader.cpp
             ${SOURCE_PATH}/LWOLoader.cpp
             ${SOURCE_PATH}/LWOMaterial.cpp
             ${SOURCE_PATH}/LWSLoader.cpp
             ${SOURCE_PATH}/LimitBoneWeightsProcess.cpp
             ${SOURCE_PATH}/MD2Loader.cpp
             ${SOURCE_PATH}/MD3Loader.cpp
             ${SOURCE_PATH}/MD5Loader.cpp
             ${SOURCE_PATH}/MD5Parser.cpp
             ${SOURCE_PATH}/MDCLoader.cpp
             ${SOURCE_PATH}/MDLLoader.cpp
             ${SOURCE_PATH}/MDLMaterialLoader.cpp
             ${SOURCE_PATH}/MMDImporter.cpp
             ${SOURCE_PATH}/MMDPmxParser.cpp
             ${SOURCE_PATH}/MS3DLoader.cpp
             ${SOURCE_PATH}/MakeVerboseFormat.cpp
             ${SOURCE_PATH}/MaterialSystem.cpp
             ${SOURCE_PATH}/NDOLoader.cpp
             ${SOURCE_PATH}/NFFLoader.cpp
             ${SOURCE_PATH}/OFFLoader.cpp
             ${SOURCE_PATH}/ObjExporter.cpp
             ${SOURCE_PATH}/ObjFileImporter.cpp
             ${SOURCE_PATH}/ObjFileMtlImporter.cpp
             ${SOURCE_PATH}/ObjFileParser.cpp
             ${SOURCE_PATH}/OgreBinarySerializer.cpp
             ${SOURCE_PATH}/OgreImporter.cpp
             ${SOURCE_PATH}/OgreMaterial.cpp
             ${SOURCE_PATH}/OgreStructs.cpp
             ${SOURCE_PATH}/OgreXmlSerializer.cpp
             ${SOURCE_PATH}/OpenGEXExporter.cpp
             ${SOURCE_PATH}/OpenGEXImporter.cpp
             ${SOURCE_PATH}/OptimizeGraph.cpp
             ${SOURCE_PATH}/OptimizeMeshes.cpp
             ${SOURCE_PATH}/PlyExporter.cpp
             ${SOURCE_PATH}/PlyLoader.cpp
             ${SOURCE_PATH}/PlyParser.cpp
             ${SOURCE_PATH}/PostStepRegistry.cpp
             ${SOURCE_PATH}/PretransformVertices.cpp
             ${SOURCE_PATH}/ProcessHelper.cpp
             ${SOURCE_PATH}/Q3BSPFileImporter.cpp
             ${SOURCE_PATH}/Q3BSPFileParser.cpp
             ${SOURCE_PATH}/Q3BSPZipArchive.cpp
             ${SOURCE_PATH}/Q3DLoader.cpp
             ${SOURCE_PATH}/RawLoader.cpp
             ${SOURCE_PATH}/RemoveComments.cpp
             ${SOURCE_PATH}/RemoveRedundantMaterials.cpp
             ${SOURCE_PATH}/RemoveVCProcess.cpp
             ${SOURCE_PATH}/SGSpatialSort.cpp
             ${SOURCE_PATH}/SIBImporter.cpp
             ${SOURCE_PATH}/SMDLoader.cpp
             ${SOURCE_PATH}/STEPFileEncoding.cpp
             ${SOURCE_PATH}/STEPFileReader.cpp
             ${SOURCE_PATH}/STLExporter.cpp
             ${SOURCE_PATH}/STLLoader.cpp
             ${SOURCE_PATH}/SceneCombiner.cpp
             ${SOURCE_PATH}/ScenePreprocessor.cpp
             ${SOURCE_PATH}/SkeletonMeshBuilder.cpp
             ${SOURCE_PATH}/SmoothingGroups.inl
             ${SOURCE_PATH}/SortByPTypeProcess.cpp
             ${SOURCE_PATH}/SpatialSort.cpp
             ${SOURCE_PATH}/SplitByBoneCountProcess.cpp
             ${SOURCE_PATH}/SplitLargeMeshes.cpp
             ${SOURCE_PATH}/StandardShapes.cpp
             ${SOURCE_PATH}/StepExporter.cpp
             ${SOURCE_PATH}/Subdivision.cpp
             ${SOURCE_PATH}/TargetAnimation.cpp
             ${SOURCE_PATH}/TerragenLoader.cpp
             ${SOURCE_PATH}/TextureTransform.cpp
             ${SOURCE_PATH}/TriangulateProcess.cpp
             ${SOURCE_PATH}/UnrealLoader.cpp
             ${SOURCE_PATH}/ValidateDataStructure.cpp
             ${SOURCE_PATH}/Version.cpp
             ${SOURCE_PATH}/VertexTriangleAdjacency.cpp
             ${SOURCE_PATH}/X3DExporter.cpp
             ${SOURCE_PATH}/X3DExporter.hpp
             ${SOURCE_PATH}/X3DImporter.cpp
             ${SOURCE_PATH}/X3DImporter.hpp
             ${SOURCE_PATH}/X3DImporter_Geometry2D.cpp
             ${SOURCE_PATH}/X3DImporter_Geometry3D.cpp
             ${SOURCE_PATH}/X3DImporter_Group.cpp
             ${SOURCE_PATH}/X3DImporter_Light.cpp
             ${SOURCE_PATH}/X3DImporter_Macro.hpp
             ${SOURCE_PATH}/X3DImporter_Metadata.cpp
             ${SOURCE_PATH}/X3DImporter_Networking.cpp
             ${SOURCE_PATH}/X3DImporter_Node.hpp
             ${SOURCE_PATH}/X3DImporter_Postprocess.cpp
             ${SOURCE_PATH}/X3DImporter_Rendering.cpp
             ${SOURCE_PATH}/X3DImporter_Shape.cpp
             ${SOURCE_PATH}/X3DImporter_Texturing.cpp
             ${SOURCE_PATH}/XFileExporter.cpp
             ${SOURCE_PATH}/XFileImporter.cpp
             ${SOURCE_PATH}/XFileParser.cpp
             ${SOURCE_PATH}/XGLLoader.cpp
             ${SOURCE_PATH}/glTFExporter.cpp
             ${SOURCE_PATH}/glTFImporter.cpp
             ${SOURCE_PATH}/scene.cpp )


target_link_libraries( matrix_ap

                        contrib
                       )